@@ -1,5 +1,11 @@
 2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/cursors/*: Moved to src/pixmaps/
+	* src/Makefile.am. src/cursors.[ch], src/pixmaps/Makefile.am:
+	Follow the change.
+
+2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
+
 	* plugins/image_saver/Makefile.am, plugins/io_stream/Makefile.am,
 	  plugins/thumbnail/Makefile.am, plugins/image_loader/Makefile.am,
 	  plugins/image_view/Makefile.am, plugins/thumbnail_view/Makefile.am,
